[dyad] Added missing npm scripts to client package.json - wrote 1 file(s)

--- a/client/package.json
+++ b/client/package.json
@@ -1,4 +1,13 @@
 {
+  "name": "gpt-auth-client",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
   "dependencies": {
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/auth-ui-react": "^0.4.7",
