--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,8 @@
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/node": "24.2.0",
+    "@types/react": "19.1.9",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
