--- a/client/package.json
+++ b/client/package.json
@@ -1,13 +1,4 @@
 {
-  "name": "gpt-auth-client",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "npx next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
   "dependencies": {
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/auth-ui-react": "^0.4.7",
@@ -17,11 +8,12 @@
     "lucide-react": "^0.417.0",
     "next": "14.0.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hot-toast": "^2.5.2"
   },
   "devDependencies": {
     "@types/node": "24.2.0",
-    "@types/react": "19.1.9",
+    "@types/react": "18.2.0",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
