--- a/client/package.json
+++ b/client/package.json
@@ -1,13 +1,4 @@
 {
-  "name": "gpt-auth-client",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
   "dependencies": {
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/auth-ui-react": "^0.4.7",
@@ -29,5 +20,10 @@
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5.9.2"
+  },
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
   }
 }
