[dyad] Fixed build errors by simplifying the root package.json - wrote 1 file(s) + extra files edited outside of Dyad

--- a/package.json
+++ b/package.json
@@ -1,10 +1,7 @@
 {
   "name": "gpt-auth-root",
   "private": true,
-  "workspaces": [
-    "client"
-  ],
   "scripts": {
-    "dev": "npm run dev --workspace=client"
+    "dev": "npm run dev --prefix client"
   }
 }
