[dyad] Fixed module not found error by ensuring client dependencies are installed. - wrote 1 file(s) + extra files edited outside of Dyad

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "gpt-auth-root",
   "private": true,
   "scripts": {
-    "dev": "npm run dev --prefix client"
+    "dev": "npm run dev --prefix client",
+    "postinstall": "npm install --prefix client"
   }
 }
