--- a/client/package.json
+++ b/client/package.json
@@ -17,8 +17,7 @@
     "lucide-react": "^0.417.0",
     "next": "14.0.3",
     "react": "^18",
-    "react-dom": "^18",
-    "react-hot-toast": "^2.5.2"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@types/node": "24.2.0",
