[dyad] Fixed a TypeScript module error by updating dependencies. - wrote 1 file(s) + extra files edited outside of Dyad

--- a/package.json
+++ b/package.json
@@ -4,5 +4,8 @@
   "scripts": {
     "dev": "npm run dev --prefix client",
     "postinstall": "npm install --prefix client"
+  },
+  "devDependencies": {
+    "typescript": "^5.9.2"
   }
 }
