--- a/client/package.json
+++ b/client/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "client",
+  "name": "gpt-auth-client",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -20,13 +20,10 @@
     "react-dom": "^18"
   },
   "devDependencies": {
-    "@types/node": "24.2.0",
-    "@types/react": "18.2.0",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0",
-    "typescript": "^5.9.2"
+    "tailwindcss": "^3.3.0"
   }
 }
