[dyad] Creating simple server to bypass build issues - wrote 4 file(s) + extra files edited outside of Dyad

--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "gpt-auth-root",
   "version": "1.0.0",
   "private": true,
+  "scripts": {
+    "start": "node server.js"
+  },
   "devDependencies": {
     "typescript": "^5.9.2"
   }
