--- a/.gitignore
+++ b/.gitignore
@@ -1,35 +1,52 @@
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
 # Dependencies
 /node_modules
-/client/node_modules
 /server/venv
 /server/env
+/.pnp
+.pnp.js
+.yarn/install-state.gz
+
+# testing
+/coverage
 
 # Next.js
-/client/.next/
-/client/out/
+/.next/
+/out/
+
+# production
+/build
 
 # Python
 /server/__pycache__/
 *.pyc
 
-# Lockfiles
-package-lock.json
-yarn.lock
-
-# Local environment files
-.env*
-*.env.local
-!/.env.example
-
-# IDE and OS files
+# misc
 .DS_Store
-.vscode/
-.idea/
+*.pem
 
-# Logs
+# debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Misc
-*.pem
+# local env files
+.env*
+.env.local
+!/.env.example
+
+# vercel
+.vercel
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts
+
+# Lockfiles
+package-lock.json
+yarn.lock
+
+# IDE and OS files
+.vscode/
+.idea/
