--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
+    "baseUrl": ".",
     "plugins": [
       {
         "name": "next"
@@ -21,7 +22,7 @@
     ],
     "paths": {
       "@/*": [
-        "./app/*"
+        "./*"
       ]
     }
   },
