[dyad] Fixed GPT auth by switching to a custom header - wrote 8 file(s) + extra files edited outside of Dyad

--- a/supabase/tsconfig.json
+++ b/supabase/tsconfig.json
@@ -1,10 +1,14 @@
 {
-  "extends": "../tsconfig.json",
   "compilerOptions": {
-    "paths": {},
+    "target": "esnext",
+    "module": "esnext",
+    "moduleResolution": "node",
+    "esModuleInterop": true,
+    "strict": true,
+    "skipLibCheck": true,
+    "lib": ["esnext"],
     "types": ["@supabase/functions-js/src/edge-runtime.d.ts"]
   },
-  "include": [
-    "functions/**/*.ts"
-  ]
+  "include": ["functions/**/*.ts"],
+  "exclude": ["node_modules"]
 }
