--- a/supabase/tsconfig.json
+++ b/supabase/tsconfig.json
@@ -2,13 +2,12 @@
   "compilerOptions": {
     "target": "esnext",
     "module": "esnext",
-    "moduleResolution": "node",
-    "esModuleInterop": true,
+    "lib": ["esnext", "dom"],
+    "moduleResolution": "bundler",
     "strict": true,
-    "skipLibCheck": true,
-    "lib": ["esnext"],
-    "types": ["@supabase/functions-js/src/edge-runtime.d.ts"]
+    "jsx": "react-jsx",
+    "jsxImportSource": "https://esm.sh/react@18.2.0",
+    "types": ["https://deno.land/x/service_worker/lib.d.ts"]
   },
-  "include": ["functions/**/*.ts"],
-  "exclude": ["node_modules"]
+  "include": ["./**/*.ts"]
 }
