[dyad] Implemented a two-action system to reliably track user messages - wrote 6 file(s), deleted 1 file(s) + extra files edited outside of Dyad

--- a/supabase/tsconfig.json
+++ b/supabase/tsconfig.json
@@ -9,5 +9,5 @@
     "jsxImportSource": "https://esm.sh/react@18.2.0",
     "types": ["https://deno.land/x/service_worker/lib.d.ts"]
   },
-  "include": ["./**/*.ts"]
+  "include": ["./functions/**/*.ts"]
 }
